--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
   "author": "Amirul Dev",
   "license": "MIT",
   "repository": {
-    "url": "git@github.com:adiwajshing/baileys.git"
+    "url": "git@github.com:amiruldev20/baileys.git"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.3",
     "axios": "^1.3.3",
     "futoin-hkdf": "^1.5.1",
-    "libsignal": "git+https://github.com/adiwajshing/libsignal-node",
+    "libsignal": "git+https://github.com/amiruldev20/signal",
     "music-metadata": "^7.12.3",
     "node-cache": "^5.1.2",
     "pino": "^7.0.0",
